kubernetes/argocd-apps/pihole/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pihole
  labels:
    app: pihole
    environment: production
    managed-by: argocd
    repository: REDACTED_25022d4e
